--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,24 @@
         "php": "^5.6 || ^7.0",
         "zendframework/zend-component-installer": "^1.0 || ^0.7 || ^1.0.0-dev@dev",
         "zendframework/zend-mvc": "^3.0.1",
-        "zfcampus/zf-development-mode": "^3.0"
+        "zfcampus/zf-development-mode": "^3.0",
+        "zendframework/zend-mvc-form": "^1.0",
+        "zendframework/zend-mvc-plugins": "^1.0.1",
+        "zendframework/zend-session": "^2.7.1",
+        "zendframework/zend-authentication": "^2.5",
+        "doctrine/doctrine-orm-module": "dev-master as 1.0.9",
+        "doctrine/doctrine-module": "dev-master",
+        "doctrine/migrations": "^1.4",
+        "zendframework/zend-math": "^3.0",
+        "zendframework/zend-crypt": "^3.1",
+        "zendframework/zend-captcha": "^2.6",
+        "zendframework/zend-json": "^3.0"
     },
     "autoload": {
         "psr-4": {
-            "Application\\": "module/Application/src/"
+            "Application\\": "module/Application/src/",
+            "User\\": "module/User/src/"
+
         }
     },
     "autoload-dev": {
