add chatting to many people function

--- a/composer.json
+++ b/composer.json
@@ -31,8 +31,8 @@
     "autoload": {
         "psr-4": {
             "Application\\": "module/Application/src/",
-            "User\\": "module/User/src/"
-
+            "User\\": "module/User/src/",
+            "Message\\": "module/Message/src/"
         }
     },
     "autoload-dev": {
